--- a/Icons.plist
+++ b/Icons.plist
@@ -174,6 +174,21 @@
 					<key>display-icon</key>
 					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b10.icns</string>
 				</dict>
+				<key>5b7b</key>
+                                <dict>
+                                        <key>display-resolution-preview-icon</key>
+                                        <string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b7b.tiff</string>
+                                        <key>resolution-preview-x</key>
+                                        <integer>33</integer>
+                                        <key>resolution-preview-y</key>
+                                        <integer>47</integer>
+                                        <key>resolution-preview-width</key>
+                                        <integer>160</integer>
+                                        <key>resolution-preview-height</key>
+                                        <integer>90</integer>
+                                        <key>display-icon</key>
+                                        <string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b7b.icns</string>
+                                </dict>
 				<key>5b11</key>
 				<dict>
 					<key>display-resolution-preview-icon</key>
@@ -188,6 +203,21 @@
 					<integer>114</integer>
 					<key>display-icon</key>
 					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b11.icns</string>
+				</dict>
+				<key>5b74</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b74.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>11</integer>
+					<key>resolution-preview-y</key>
+					<integer>47</integer>
+					<key>resolution-preview-width</key>
+					<integer>202</integer>
+					<key>resolution-preview-height</key>
+					<integer>114</integer>
+					<key>display-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b74.icns</string>
 				</dict>
 			</dict>
 		</dict>
@@ -209,6 +239,21 @@
 					<integer>114</integer>
 					<key>display-icon</key>
 					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b11.icns</string>
+				</dict>
+				<key>5b74</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b74.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>11</integer>
+					<key>resolution-preview-y</key>
+					<integer>47</integer>
+					<key>resolution-preview-width</key>
+					<integer>202</integer>
+					<key>resolution-preview-height</key>
+					<integer>114</integer>
+					<key>display-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-1e6d/DisplayProductID-5b74.icns</string>
 				</dict>
 			</dict>
 		</dict>
@@ -283,6 +328,19 @@
 					<key>resolution-preview-height</key>
 					<integer>76</integer>
 				</dict>
+				<key>a027-d9b49a</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a027-d9b49a.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>52</integer>
+					<key>resolution-preview-y</key>
+					<integer>66</integer>
+					<key>resolution-preview-width</key>
+					<integer>122</integer>
+					<key>resolution-preview-height</key>
+					<integer>76</integer>
+				</dict>
 				<key>a028-e1e1df</key>
 				<dict>
 					<key>display-resolution-preview-icon</key>
@@ -326,6 +384,19 @@
 				<dict>
 					<key>display-resolution-preview-icon</key>
 					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a028-e8c9c3.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>52</integer>
+					<key>resolution-preview-y</key>
+					<integer>66</integer>
+					<key>resolution-preview-width</key>
+					<integer>122</integer>
+					<key>resolution-preview-height</key>
+					<integer>76</integer>
+				</dict>
+				<key>a028-d9b49a</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a027-d9b49a.tiff</string>
 					<key>resolution-preview-x</key>
 					<integer>52</integer>
 					<key>resolution-preview-y</key>
@@ -426,6 +497,58 @@
 					<key>resolution-preview-height</key>
 					<integer>83</integer>
 				</dict>
+				<key>a03d-e1e1df</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a033-e1e1df.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a03d-9d9da0</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a033-9d9da0.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a03e-e1e1df</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a033-e1e1df.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a03e-9d9da0</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a033-9d9da0.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
 				<key>a037-e1e1df</key>
 				<dict>
 					<key>display-resolution-preview-icon</key>
@@ -505,6 +628,32 @@
 					<integer>92</integer>
 				</dict>
 				<key>a038-e1e1df</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a030-e1e1df.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>40</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>147</integer>
+					<key>resolution-preview-height</key>
+					<integer>92</integer>
+				</dict>
+				<key>a040-9d9da0</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a030-9d9da0.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>40</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>147</integer>
+					<key>resolution-preview-height</key>
+					<integer>92</integer>
+				</dict>
+				<key>a040-e1e1df</key>
 				<dict>
 					<key>display-resolution-preview-icon</key>
 					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a030-e1e1df.tiff</string>
@@ -703,6 +852,149 @@
 				<dict>
 					<key>display-resolution-preview-icon</key>
 					<string>/System/Library/Displays/Contents/Resources/Overrides/Models/Mac-7BA5B2D9E42DDD94.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>12</integer>
+					<key>resolution-preview-y</key>
+					<integer>71</integer>
+					<key>resolution-preview-width</key>
+					<integer>202</integer>
+					<key>resolution-preview-height</key>
+					<integer>114</integer>
+				</dict>
+				<key>a039-9d9da0</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-9d9da0.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a039-e1e1df</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-e1e1df.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a039-ebd7bf</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-ebd7bf.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a039-d9b49a</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-ebd7bf.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a03c-9d9da0</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-9d9da0.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a03c-e1e1df</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-e1e1df.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a03c-ebd7bf</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-ebd7bf.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>a03c-d9b49a</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-a03c-ebd7bf.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>48</integer>
+					<key>resolution-preview-y</key>
+					<integer>62</integer>
+					<key>resolution-preview-width</key>
+					<integer>131</integer>
+					<key>resolution-preview-height</key>
+					<integer>83</integer>
+				</dict>
+				<key>ae25</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/Models/Mac-65CE76090165799A.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>12</integer>
+					<key>resolution-preview-y</key>
+					<integer>71</integer>
+					<key>resolution-preview-width</key>
+					<integer>202</integer>
+					<key>resolution-preview-height</key>
+					<integer>114</integer>
+				</dict>
+				<key>ae26</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/Models/Mac-65CE76090165799A.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>12</integer>
+					<key>resolution-preview-y</key>
+					<integer>71</integer>
+					<key>resolution-preview-width</key>
+					<integer>202</integer>
+					<key>resolution-preview-height</key>
+					<integer>114</integer>
+				</dict>
+				<key>ae27</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/Models/Mac-65CE76090165799A.tiff</string>
 					<key>resolution-preview-x</key>
 					<integer>12</integer>
 					<key>resolution-preview-y</key>
