new dev version, 10.15 support

--- a/Icons.plist
+++ b/Icons.plist
@@ -1004,11 +1004,269 @@
 					<key>resolution-preview-height</key>
 					<integer>114</integer>
 				</dict>
+				<key>ae21</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>5</integer>
+					<key>resolution-preview-y</key>
+					<integer>45</integer>
+					<key>resolution-preview-width</key>
+					<integer>216</integer>
+					<key>resolution-preview-height</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-90</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-90</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-90</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-90</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-90</key>
+					<integer>189</integer>
+					<key>display-resolution-preview-icon-180</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x-180</key>
+					<integer>5</integer>
+					<key>resolution-preview-y-180</key>
+					<integer>45</integer>
+					<key>resolution-preview-width-180</key>
+					<integer>216</integer>
+					<key>resolution-preview-height-180</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-270</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-270</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-270</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-270</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-270</key>
+					<integer>189</integer>
+				</dict>
+				<key>ae22</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>5</integer>
+					<key>resolution-preview-y</key>
+					<integer>45</integer>
+					<key>resolution-preview-width</key>
+					<integer>216</integer>
+					<key>resolution-preview-height</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-90</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-90</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-90</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-90</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-90</key>
+					<integer>189</integer>
+					<key>display-resolution-preview-icon-180</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x-180</key>
+					<integer>5</integer>
+					<key>resolution-preview-y-180</key>
+					<integer>45</integer>
+					<key>resolution-preview-width-180</key>
+					<integer>216</integer>
+					<key>resolution-preview-height-180</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-270</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-270</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-270</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-270</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-270</key>
+					<integer>189</integer>
+				</dict>
+				<key>ae23</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>5</integer>
+					<key>resolution-preview-y</key>
+					<integer>45</integer>
+					<key>resolution-preview-width</key>
+					<integer>216</integer>
+					<key>resolution-preview-height</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-90</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-90</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-90</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-90</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-90</key>
+					<integer>189</integer>
+					<key>display-resolution-preview-icon-180</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x-180</key>
+					<integer>5</integer>
+					<key>resolution-preview-y-180</key>
+					<integer>45</integer>
+					<key>resolution-preview-width-180</key>
+					<integer>216</integer>
+					<key>resolution-preview-height-180</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-270</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-270</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-270</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-270</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-270</key>
+					<integer>189</integer>
+				</dict>
+				<key>ae2d</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>5</integer>
+					<key>resolution-preview-y</key>
+					<integer>45</integer>
+					<key>resolution-preview-width</key>
+					<integer>216</integer>
+					<key>resolution-preview-height</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-90</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-90</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-90</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-90</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-90</key>
+					<integer>189</integer>
+					<key>display-resolution-preview-icon-180</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x-180</key>
+					<integer>5</integer>
+					<key>resolution-preview-y-180</key>
+					<integer>45</integer>
+					<key>resolution-preview-width-180</key>
+					<integer>216</integer>
+					<key>resolution-preview-height-180</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-270</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-270</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-270</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-270</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-270</key>
+					<integer>189</integer>
+				</dict>
+				<key>ae2e</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>5</integer>
+					<key>resolution-preview-y</key>
+					<integer>45</integer>
+					<key>resolution-preview-width</key>
+					<integer>216</integer>
+					<key>resolution-preview-height</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-90</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-90</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-90</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-90</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-90</key>
+					<integer>189</integer>
+					<key>display-resolution-preview-icon-180</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x-180</key>
+					<integer>5</integer>
+					<key>resolution-preview-y-180</key>
+					<integer>45</integer>
+					<key>resolution-preview-width-180</key>
+					<integer>216</integer>
+					<key>resolution-preview-height-180</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-270</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-270</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-270</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-270</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-270</key>
+					<integer>189</integer>
+				</dict>
+				<key>ae2f</key>
+				<dict>
+					<key>display-resolution-preview-icon</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x</key>
+					<integer>5</integer>
+					<key>resolution-preview-y</key>
+					<integer>45</integer>
+					<key>resolution-preview-width</key>
+					<integer>216</integer>
+					<key>resolution-preview-height</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-90</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-90</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-90</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-90</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-90</key>
+					<integer>189</integer>
+					<key>display-resolution-preview-icon-180</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Landscape.tiff</string>
+					<key>resolution-preview-x-180</key>
+					<integer>5</integer>
+					<key>resolution-preview-y-180</key>
+					<integer>45</integer>
+					<key>resolution-preview-width-180</key>
+					<integer>216</integer>
+					<key>resolution-preview-height-180</key>
+					<integer>121</integer>
+					<key>display-resolution-preview-icon-270</key>
+					<string>/System/Library/Displays/Contents/Resources/Overrides/DisplayVendorID-610/DisplayProductID-ae2f_Potrait.tiff</string>
+					<key>resolution-preview-x-270</key>
+					<integer>60</integer>
+					<key>resolution-preview-y-270</key>
+					<integer>30</integer>
+					<key>resolution-preview-width-270</key>
+					<integer>106</integer>
+					<key>resolution-preview-height-270</key>
+					<integer>189</integer>
+				</dict>
 			</dict>
 			<key>display-icon</key>
 			<string>com.apple.cinema-display</string>
 		</dict>
-		<key>VID</key>
+        <key>VID</key>
 		<dict>
 			<key>products</key>
 			<dict>
